# my-gcc-plugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gcc-pass.cpp  warn_unused.cpp
src/examples/: cfg_test.cpp  test-warn.cpp  test.cc
src/include/: gcc-pass.h  my-gcc-utils.h
